# HW_M14_goit_py_web

./: .gitignore
P1_Documentation/: README.md  env.example  main.py  pyproject.toml
P1_Documentation/docs/: conf.py  index.rst
P1_Documentation/docs/_build/doctrees/: environment.pickle  index.doctree
P1_Documentation/docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
P1_Documentation/migrations/versions/: 044cb286802b_user_add_confirmed.py
P1_Documentation/src/: schemas.py
P1_Documentation/src/conf/: config.py
P1_Documentation/src/database/: db.py
P1_Documentation/src/repository/: contacts.py  users.py
P1_Documentation/src/routes/: auth.py  contacts.py  users.py
P1_Documentation/src/services/: auth.py  email.py
P1_Documentation/src/services/templates/: email_template.html
P2_Tests/: README.md  env.example  main.py  pyproject.toml  test.db
P2_Tests/migrations/versions/: 0e067523d6eb_add_user.py  fd96bd02249f_init.py
P2_Tests/src/: schemas.py
P2_Tests/src/conf/: config.py
P2_Tests/src/database/: db.py  models.py
P2_Tests/src/repository/: contacts.py  users.py
P2_Tests/src/routes/: auth.py  contacts.py  users.py
P2_Tests/src/services/: auth.py  email.py
P2_Tests/tests/: conftest.py  test_route_auth.py  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
